fix: button colors, spacing issues, and use boxes instead of cards for projects on Account Access/Profile/Teams, and Team Members/Projects. fix: titles in boxes so they have same hover color/transition as other content.

--- a/director/assets/sass/styles.sass
+++ b/director/assets/sass/styles.sass
@@ -117,6 +117,10 @@ td.title-caption
     width: 14px
     padding-right: 0
 
+a.box:hover .title
+  +transition
+  color: $primary
+
 .switch[type=checkbox]
   & + label
     font-size: 14px
